# evidence-hub

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  WHAT-WE-BUILT-TODAY.md  evidence-hub-architecture.drawio  pyproject.toml  run-preview.bat
docs/: ADMIN-RUNBOOK.md  CUSTOMER-GUIDE.md  SYSTEM-OVERVIEW.md
infra/cdk/: cdk.json  package-lock.json  package.json  tsconfig.json
infra/cdk/lib/: evidence-hub-stack.ts
src/evidence_hub/: api.py  audit_pack.py  auth.py  config.py  dashboard.py  db.py  evaluator.py  graph.py  ledger_source.py  normalizer.py  readiness.py  registry.py  schemas.py  secrets.py  service.py
src/evidence_hub/resolvers/: manifest.py
src/evidence_hub/static/: index.html
src/evidence_hub/store/: base.py  dynamo.py  sql.py
tests/: conftest.py  evidence-manifest.json  test_api.py  test_dashboard.py  test_evaluator.py  test_normalizer.py  test_readiness.py  test_registry.py  test_resolver.py  test_store.py
tests/fixtures/: 11111111-1111-4111-8111-111111111111.json  a92ffa42-27a8-4e46-81d6-b9b1a654077f.json
tools/: generate-architecture-diagram.py
